{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 13,
  "lineage": "1d6f3025-cb4e-d42e-b3fc-b3a1f1689a8a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-15T20:37:49.212-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/crack-atlas-430705-a1/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/crack-atlas-430705-a1/global/networks/custom-vpc",
            "priority": 1000,
            "project": "crack-atlas-430705-a1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/crack-atlas-430705-a1/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-15T20:37:48.861-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/crack-atlas-430705-a1/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/crack-atlas-430705-a1/global/networks/custom-vpc",
            "priority": 1000,
            "project": "crack-atlas-430705-a1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/crack-atlas-430705-a1/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/crack-atlas-430705-a1/global/networks/custom-vpc",
            "mtu": 0,
            "name": "custom-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7425731164903232976",
            "project": "crack-atlas-430705-a1",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/crack-atlas-430705-a1/global/networks/custom-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-15T07:39:59.114-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/crack-atlas-430705-a1/regions/asia-south1/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/crack-atlas-430705-a1/global/networks/custom-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "crack-atlas-430705-a1",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.36.0.0/14",
                "range_name": "gke-devops-task-cluster-pods-1869a2a3",
                "reserved_internal_range": "https://networkconnectivity.googleapis.com/v1/projects/crack-atlas-430705-a1/locations/global/internalRanges/gke-devops-task-cluster-pods-1869a2a3"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/crack-atlas-430705-a1/regions/asia-south1/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}